src/styles/style.scss
@import './_partials/_vars.scss';
@import './_partials/_defaults.scss';
@import './_partials/_flexbox.scss';
@import './_partials/_mixins.scss';
@import './_partials/_menu.scss';
@import './_partials/_theme.scss';
@import './_partials/_icons.scss';

/* Header */

.site-header {
  color: theme($websiteTheme, text);
  background: theme($websiteTheme, background);
  padding: 4em;
  text-align: center;
  position: relative;
  overflow: hidden;

  .name {
    color: theme($websiteTheme, primary);
  }

  .job {
    font-weight: 400;
  }

  .wave-emoji {
    @keyframes wave {
      0% { transform: rotate(  0.0deg) }
      10% { transform: rotate(-10.0deg) }
      20% { transform: rotate( 12.0deg) }
      30% { transform: rotate(-10.0deg) }
      40% { transform: rotate(  9.0deg) }
      50% { transform: rotate(  0.0deg) }
      100% { transform: rotate(  0.0deg) }
    }

    animation-duration: 1.8s;
    animation-iteration-count: infinite;
    animation-name: wave;
    display: inline-block;
    transform-origin: 70% 70%;
  }
}

/* About Me */

.aboutme {
  background-color: theme($websiteTheme, backgroundSurface);
  color: theme($websiteTheme, text);
  padding-top: 2em;
  padding-bottom: 2em;

  .bio {
    font-size: 1.5em;
    margin-top: 0;
  }

  .avatar {
    border-radius: 50%;
    display: flex;
    margin: 0 auto;
    max-width: 100%;
    width: 385px;
  }
}

.btn {
  align-items: center;
  border-radius: 50px;
  color: theme($websiteTheme, textOnPrimary);
  display: flex;
  font-family: $systemFonts;
  font-weight: 400;
  letter-spacing: 0.015em;
  padding: 0.45em 1em;
  transition: all 0.3s ease-out;

  &-large {
    font-size: 1.15em;
    margin: 1.5em 0;
    padding: 0.55em 1.5em;
  }

  &:hover {
    color: theme($websiteTheme, textOnPrimary);
  }

  &-red {
    background-color: theme($websiteTheme, primary);

    &-raised,
    &:hover {
      box-shadow: 0 0.5em 1.5em rgba(theme($websiteTheme, primary), .45);
    }
  }

  &-blue {
    background-color: theme($websiteTheme, secondary);

    &:hover {
      box-shadow: 0 0.5em 1.5em rgba(theme($websiteTheme, secondary), .45);
    }
  }
}

/* Open Source */

.github {
  &-repo {
    display: flex;
  }

  .repo {
    border-radius: 2px;
    border-top-color: theme($websiteTheme, textSecondary);
    border-top: 3px solid;
    box-shadow: 0 1px 2px rgba(theme($websiteTheme, shadowColor), .15);
    flex: 1;
    margin: 1em 0;
    padding: 3em 2em;
    transition: all 0.3s ease-out;

    &:hover {
      box-shadow: 0 16px 24px rgba(theme($websiteTheme, shadowColor), .15);
    }

    &-title {
      display: flex;
      justify-content: space-between;
      align-items: center;
      margin-bottom: 0.5em;

      h4 {
        color: theme($websiteTheme, text);
        transition: color 0.2s ease-out;
        margin: 0;

        &:hover {
          color: theme($websiteTheme, textSecondary);
        }
      }
    }

    &-stats {
      display: flex;
      align-items: center;
      margin-top: 0.75em;
      margin-bottom: 0.75em;
    }

    &-description {
      font-weight: 300;
      font-size: 1.05em;
    }
  }

  @each $tag, $color in ('javascript': $javascript, 'html': $html, 'css': $css, 'shell': $shell) {
    @include createLanguageCard($tag, $color);
  }

  .icon-fork,
  .icon-star {
    width: 1.15em;
    height: 1.15em;
    padding: 0 0.25em 0 0;
    transition: all 0.2s ease-out;

    &:hover {
      transform: scale(1.25);
    }

    &:active {
      transform: scale(.95);
    }
  }

  .icon-star {
    fill: $stars;
  }

  .icon-globe {
    fill: $web;
    width: 1.35em;
    height: 1.35em;
  }

  .icon-fork {
    fill: theme($websiteTheme, text);
  }

  .icon-fork {
    margin-left: 0.35em;
  }

  .forked,
  .starred,
  .web {
    display: flex;
    align-items: center;
  }

  .stars {
    color: $stars;
  }

  .forks {
    color: theme($websiteTheme, text);
  }
}

/* Writings */

.blog {
  &-posts {
    flex-wrap: nowrap;
    overflow-x: scroll;

    &::-webkit-scrollbar {
      -webkit-appearance: none;
      height: .5em;
    }

    &::-webkit-scrollbar-thumb {
      border-radius: 4px;
      background-color: theme($websiteTheme, textSecondary);
    }

    &::-webkit-scrollbar-track {
      border-radius: 4px;
      box-shadow: 0 1px 4px rgba(theme($websiteTheme, shadowColor), .25);
      margin: 0 1.15em;
    }
  }

  .post-wrap {
    display: flex;
  }

  .post {
    border-radius: 2px;
    box-shadow: 0 1px 4px rgba(theme($websiteTheme, shadowColor), .15);
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    margin: 1em 0 2em;
    overflow: hidden;
    padding: 0;
    transition: all 0.3s ease-out;

    header {
      width: 100%;
    }

    &:hover {
      box-shadow: 0 16px 24px rgba(theme($websiteTheme, shadowColor), .15);
    }

    &-info {
      display: flex;
      flex-wrap: wrap;
      margin-top: 0.45em;
      align-items: center;
    }

    &-excerpt {
      margin-bottom: 0;
    }

    &-content {
      padding: 2em;
      display: flex;
      align-items: center;
      flex-wrap: wrap;
    }

    &-footer {
      padding: 1em 2em;
      border-top: 1px theme($websiteTheme, backgroundSurface) solid;
    }

    &-image {
      filter: blur(5px);
      opacity: 0;
      transition: filter 500ms ease-in-out,opacity 500ms ease-in-out;
      width: 100%;
      height: 155px;
    }

    .lazyloaded {
      filter: blur(0);
      opacity: 1;
      height: auto;
    }

    &-title {
      font-size: 1.35em;
      font-weight: 600;
      line-height: 1.15;

      a {
        color: theme($websiteTheme, text);
        transition: color 0.2s ease-out;

        &:hover {
          color: theme($websiteTheme, textSecondary);
        }
      }
    }

    &-tag {
      &:hover::before {
        visibility: visible;
        -webkit-transform: scaleX(1);
        transform: scaleX(1);
      }

      &:before {
        -webkit-transform: scaleX(0);
        -webkit-transition: all 0.2s ease-in-out 0s;
        bottom: 0;
        content: "";
        height: 2px;
        left: 0;
        position: absolute;
        transform: scaleX(0);
        transition: all 0.2s ease-in-out 0s;
        visibility: hidden;
        width: 100%;
      }
    }

    &-tags {
      a {
        font-size: 0.75em;
        margin-right: 0.85em;
        padding: 0 0.25em 0.25em;
        position: relative;
        text-decoration: none;
        text-transform: uppercase;
      }

      @each $tag, $color in ('personal': $personal, 'javascript': $javascript, 'nodejs': $nodejs, 'npm': $npm, 'tools': $tools, 'react': $react, 'conferences': $conferences) {
        @include createTag($tag, $color);
      }
    }
  }

  .fake-article {
    color: theme($websiteTheme, text);
    justify-content: center;
  }

  time {
    color: theme($websiteTheme, textSecondary);
    font-size: 0.75em;
    font-weight: 400;
    margin-right: 1em;
    text-transform: uppercase;
  }

  .read-more {
    align-items: center;
    color: theme($websiteTheme, secondary);
    display: flex;
    transition: all 0.3s ease-out;

    &:hover {
      color: rgba(theme($websiteTheme, secondary), 0.6);

      .icon-arrow {
        margin-left: 0.85em;
        fill: rgba(theme($websiteTheme, secondary), 0.6);
      }
    }
  }

  .icon-arrow {
    width: 1.25em;
    height: 1.25em;
    margin-left: 0.35em;
    transition: all 0.15s ease-out;
    fill: theme($websiteTheme, secondary);
  }
}

.section-subtitle,
.section-title {
  text-align: center;
  font-weight: 400;
}

.section-subtitle {
  font-weight: 300;
  color: theme($websiteTheme, textSecondary);
}

/* Footer */

.site-footer {
  color: theme($websiteTheme, text);
  background-color: theme($websiteTheme, backgroundSurface);
  padding: 3em 1.5em;
  text-align: left;

  .social {
    text-align: right;
  }

  h3 {
    font-weight: 700;
    color: theme($websiteTheme, text);
  }
}

.footer-navigation {
  padding: 0;
  margin: 0;

  li {
    display: inline-block;
    padding-right: 0.95em;
    font-size: 0.75em;
    text-transform: uppercase;
  }
}

@include mediaUpToXtraSmallDevices {
  .site-header {
    padding: 4em 1.5em;
  }

  .site-header h1 {
    font-size: 3.25em;
  }

  .job {
    font-size: 2em;
  }

  section h1 {
    padding: 0 1em;
  }

  .github .repo {
    height: 115px;
    padding: 40px 20px;
  }

  footer {
    padding: 1.5em 0.5em;
  }

  footer,
  footer .social {
    text-align: center;
  }

  .avatar {
    padding-top: 1em;
  }
}

@include mediaUpToMobileDevices {
  .post,
  .repo,
  .tweet,
  section h1 {
    padding: 0;
  }

  .site-header h1 {
    font-size: 2.75em;
  }

  .job {
    font-size: 1.75em;
  }

  body,
  html {
    font-size: 15px;
  }

  .social {
    margin-top: 1.5em;
  }

  .avatar {
    width: 100%;
  }

  .blog {
    .post-image {
      height: 125px;
    }
  }
}

@include mediaUpFromSmallToXtraSmallDevices {
  .blog {
    .post-image {
      height: 172px;
    }
  }
}

